# FullStock

./: README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
AVF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
compose/django/: Dockerfile  start
compose/nginx/: default.conf
docs/: Documento de Requisitos.docx  Lista casos de uso Fullstock.docx
fixtures/: backup.json  initial_data.json
project/: settings.py  urls.py
static/css/: analytics.css  auth.css  dashboard.css  filter.css  main.css  messages.css  pagination.css  product-detail.css  products.css  table-list.css  user.css
static/js/: dashboard.js
stock/: admin.py  forms.py  models.py  views.py
stock/migrations/: 0001_initial.py  0002_alter_adapteduser_birthdate.py  0002_auto_20251105_1342.py  0002_rename_pricesale_product_productionprice_and_more.py  0003_adapteduser_alter_message_user_alter_order_user_and_more.py  0003_remove_movement_product_remove_movement_user_sale_and_more.py  0004_alter_adapteduser_password_and_more.py  0005_alter_order_status.py
stock/templates/stock/: analytics.html  category-form.html  categorys.html  confirm-delete.html  dashboard.html  index.html  login.html  messages.html  order-form.html  orders.html  product-detail.html  product-form.html  products.html  provider-form.html  providers.html  register.html  sale-form.html  sales.html  (+2 more)
temp/: db.sqlite3
templates/: base.html  categoryFilter.html  orderFilter.html  pagination.html  productFilter.html  providerFilter.html  saleFilter.html
utils/: pagination.py  verifyFilterForm.py
