[project]
name = "AVF"
version = "0.1.0"
description = "Sistema de gerenciamento de estoque"
authors = [
    { name = "Lucas Nogueira", email = "lucasemanuelndq@gmail.com" },
    { name = "Aman Santos", email = "amansantos@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "asgiref==3.7.2",
    "Django==4.2.2",
    "sqlparse==0.4.4",
    "Pillow==10.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-django",
    "pytest-asyncio",
]
lint = [
    "black",
    "flake8",
    "isort",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-asyncio",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]