[metadata]
name = AVF
version = 0.1.0
description = Sistema de gerenciamento de estoque
author = Lucas Nogueira, Aman Santos

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    project*
    stock*
    templates*
    
exclude =
    docs*
    media*
    temp*
    utils*
    static*